# hackathon-sdp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  FEATURES.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/scripts/: seed.py
apps/api/src/: main.py
apps/api/src/api/v1/: activities.py  admin.py  astronauts.py  auth.py  config.py  events.py  grades.py  health.py  planets.py  point_attributions.py  seasons.py  trophies.py  (+1 more)
apps/api/src/core/: config.py  deps.py  errors.py  rate_limit.py  security.py
apps/api/src/db/: seed.py  session.py
apps/api/src/models/: __init__.py  activity.py  astronaut.py  event.py  grade.py  planet.py  point_attribution.py  season.py  season_planet_score.py  seniority_config.py  trophy.py  trophy_attribution.py
apps/api/src/repositories/: activity.py  astronaut.py  event.py  grade.py  planet.py  point_attribution.py  season.py  trophy.py
apps/api/src/schemas/: activity.py  astronaut.py  auth.py  config.py  event.py  grade.py  planet.py  point_attribution.py  season.py  trophy.py
apps/api/src/services/: auth.py  google_sync.py  point_attribution.py  seniority_cron.py
apps/api/tests/integration/: test_activities_routes.py  test_astronaut_profile_routes.py  test_astronaut_roles_routes.py  test_auth_routes.py  test_grades_routes.py  test_health.py  test_planets_routes.py  test_seasons_routes.py
apps/api/tests/unit/: test_auth_service.py  test_deps.py  test_grade_repository.py  test_point_attribution_service.py  test_security.py
(+129 files in other folders)
